[build-system]
requires = ["setuptools>75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "purifyllm"
version = "0.1.1"
description = "purifyllm"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "William Droz", email = "william.droz.ch@gmail.com" },
]

classifiers = [
    "Intended Audience :: Developers",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
]

[project.scripts]
purifyllm = "purifyllm.main:main"

[tool.setuptools.package-data]
"*" = ["py.typed"]


[tool.setuptools.packages.find]
where = ["."]
include = ["purifyllm", "purifyllm.*"]
